--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.376.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
